--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aulas em Vídeo</title>
+
   <style>
     body {
       margin: 0;
@@ -21,11 +22,15 @@
       box-sizing: border-box;
     }
 
+    /* VIDEO PRINCIPAL */
     .main-video {
       background: #000;
       border-radius: 10px;
       overflow: hidden;
       box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      position: relative;
+      width: 100%;
+      aspect-ratio: 16 / 9;
     }
 
     .main-video iframe {
@@ -34,6 +39,7 @@
       border: none;
     }
 
+    /* PLAYLIST */
     .playlist {
       display: flex;
       flex-direction: column;
@@ -49,6 +55,7 @@
       border-radius: 8px;
       cursor: pointer;
       transition: background 0.2s;
+      min-height: 80px;
     }
 
     .thumb:hover {
@@ -61,42 +68,54 @@
       border: none;
       border-radius: 6px;
       pointer-events: none;
+      flex-shrink: 0;
     }
 
     .thumb span {
       font-size: 14px;
       align-self: center;
+      white-space: nowrap;
     }
 
+    /* MOBILE */
     @media (max-width: 768px) {
       .container {
         grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr;
+        grid-template-rows: auto auto;
+        height: auto;
       }
 
       .playlist {
         flex-direction: row;
         overflow-x: auto;
+        overflow-y: hidden;
+        padding-bottom: 6px;
       }
 
       .thumb {
         flex-direction: column;
         min-width: 140px;
+        text-align: center;
       }
 
       .thumb iframe {
         width: 100%;
         height: 80px;
       }
+
+      .thumb span {
+        font-size: 13px;
+      }
     }
   </style>
 </head>
+
 <body>
 
   <div class="container">
-    <!-- Aula 1 em tela cheia -->
+
+    <!-- Aula 1 em destaque -->
     <div class="main-video">
-      <!-- Parâmetros extras para evitar erro 153 e problemas de embed -->
       <iframe
         id="player"
         src="https://www.youtube.com/embed/frjvGef76YM?rel=0&modestbranding=1&playsinline=1"
@@ -105,7 +124,7 @@
       </iframe>
     </div>
 
-    <!-- Miniaturas: Aula 2, 3, 4, 5 -->
+    <!-- Miniaturas -->
     <div class="playlist">
       <div class="thumb" onclick="trocarVideo('gwcAJzksJ4M')">
         <iframe src="https://www.youtube.com/embed/gwcAJzksJ4M?rel=0&modestbranding=1&playsinline=1"></iframe>
@@ -127,6 +146,7 @@
         <span>Aula 5</span>
       </div>
     </div>
+
   </div>
 
   <script>
